springboot-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-api
  template:
    metadata:
      labels:
        app: springboot-api
    spec:
      containers:
        - name: springboot-api
          image: s7edgedocker/springboot-api:v1
          ports:
            - containerPort: 8080
