springboot-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: springboot-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
